Updated to template

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             <img src="https://placehold.co/600x400/111111/FFFFFF?text=SFE+Spirits+Collection" alt="SFE Spirits bottles"
                  class="hero-image"/>
 
-            <h2>Born from a vision to blend heritage with innovation, SFE Spirits celebrates the art of fine drinking —
-                smooth in spirit, fine flavour, and timelessly exotic in experience. Raise your glass. Discover your
-                spirit.</h2>
+            <p>Born from a vision to blend heritage with innovation, SFE Spirits celebrates the art of fine drinking —
+                <span class="highlight-sfe">smooth</span> in spirit, <span class="highlight-sfe">fine</span> flavour,
+                and timelessly <span class="highlight-sfe">exotic</span> in experience. Raise your glass. Discover your
+                spirit.</p>
 
             <img src="https://placehold.co/600x400/111111/FFFFFF?text=Craftsmanship+and+Character"
                  alt="Bottles and craftsmanship tools"
