--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li role="none"><a href="#story-page" data-page="story-page" class="nav-link" role="menuitem">Our
                     Story</a></li>
-                <li role="none"><a href="#spirits-page" data-page="spirits-page" class="nav-link" role="menuitem">Spirits</a>
+                <li role="none"><a href="#spirits-page" data-page="spirits-page" class="nav-link" role="menuitem">The Harbour Collection</a>
                 </li>
                 <li role="none"><a href="#contact-page" data-page="contact-page" class="nav-link" role="menuitem">Contact
                     Us</a></li>
@@ -48,8 +48,8 @@
         <section class="header fade-in-section">
             <h1>SFE Spirits</h1>
             <p>SFE Spirits presents to you a world of refined indulgence — where craftsmanship meets character. From the
-                crisp clarity of our gin, distilled to perfection with handpicked botanicals, to the deep, amber warmth
-                of our whiskey, aged with patience and passion — every bottle we create carries the essence of
+                crisp clarity of our Gin, distilled to perfection with handpicked botanicals, to the deep, amber warmth
+                of our Whiskey, aged with patience and passion — every bottle we create carries the essence of
                 distinction.</p>
 
             <img src="https://placehold.co/600x400/111111/FFFFFF?text=SFE+Spirits+Collection" alt="SFE Spirits bottles"
@@ -128,7 +128,7 @@
                         craftsmanship that once thrived by the docks. Inspired by the 19th Century coastal trade, where
                         explorers left with oak, spices, and spirit, and journeyed across the seas, it carries within
                         each sip the quiet legacy of tides and time. Matured by the mist and mellowed by the sea salt
-                        breeze, it’s a whiskey that's a harmonious blend of strength and sophistication — smooth,
+                        breeze, it’s a Whiskey that's a harmonious blend of strength and sophistication — smooth,
                         full-bodied, and best enjoyed neat. A tribute to the harbours that once welcomed royal fleets
                         and fine cargo, King's Harbour stands today as a symbol of timeless refinement, crafted for
                         those who appreciate the spirit of royalty in every pour.</p>
@@ -193,11 +193,11 @@
                                 <p>The foundational botanical, providing the classic piney, crisp flavor that defines a
                                     true Gin, complemented by bright, refreshing citrus notes.</p>
                             </div>
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Juniper & Citrus">
+                            <img src="assets/fine_juniper.jpg" alt="Juniper & Citrus">
                         </div>
 
                         <div class="botanical-item horizontal-item reversed">
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical"
+                            <img src="assets/cardamom.jpg"
                                  alt="Coriander & Cardamom">
                             <div class="botanical-item-text">
                                 <h6>Coriander & Cardamom</h6>
@@ -212,11 +212,11 @@
                                 <p>Acts as a binding agent, helping to fix and harmonize all the other delicate
                                     botanical aromas.</p>
                             </div>
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Orris Root">
+                            <img src="assets/orris_root.jpg" alt="Orris Root">
                         </div>
 
                         <div class="botanical-item horizontal-item reversed">
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Angelica Root">
+                            <img src="assets/angelica_root.jpg" alt="Angelica Root">
                             <div class="botanical-item-text">
                                 <h6>Angelica Root</h6>
                                 <p>Provides an earthy, dry, and musky aroma that helps blend the citrus and spice
@@ -229,11 +229,11 @@
                                 <h6>Nutmeg</h6>
                                 <p>Offers a subtle, warm spice and woody complexity to the mild palate.</p>
                             </div>
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Nutmeg">
+                            <img src="assets/nutmeg.jpg" alt="Nutmeg">
                         </div>
 
                         <div class="botanical-item horizontal-item reversed">
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Orange Peel">
+                            <img src="assets/orange_peel.jpg" alt="Orange Peel">
                             <div class="botanical-item-text">
                                 <h6>Orange Peel</h6>
                                 <p>Delivers a sweeter, rounder citrus brightness compared to the fruits, enhancing the
@@ -246,11 +246,11 @@
                                 <h6>Cinnamon Bark</h6>
                                 <p>Imparts a sweet, woody warmth and spice, contributing to a longer, drier finish.</p>
                             </div>
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Cinnamon Bark">
+                            <img src="assets/cinnamon_bark.jpg" alt="Cinnamon Bark">
                         </div>
 
                         <div class="botanical-item horizontal-item reversed">
-                            <img src="https://placehold.co/150x150/111111/FFFFFF?text=Botanical" alt="Caraway">
+                            <img src="assets/caraway.jpg" alt="Caraway">
                             <div class="botanical-item-text">
                                 <h6>Caraway</h6>
                                 <p>A unique aromatic seed that adds a distinct, subtle peppery-anise note for true
