Added content and styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </li>
                 <li role="none"><a href="#story-page" data-page="story-page" class="nav-link" role="menuitem">Our
                     Story</a></li>
-                <li role="none"><a href="#spirits-page" data-page="spirits-page" class="nav-link" role="menuitem">The Harbour Collection</a>
+                <li role="none"><a href="#spirits-page" data-page="spirits-page" class="nav-link" role="menuitem">The
+                    Harbour Collection</a>
                 </li>
                 <li role="none"><a href="#contact-page" data-page="contact-page" class="nav-link" role="menuitem">Contact
                     Us</a></li>
@@ -46,23 +47,26 @@
 
     <main id="home-page" class="page-content" style="display: block;">
         <section class="header fade-in-section">
-            <h1>SFE Spirits</h1>
+            <h2>SFE Spirits</h2>
             <p>SFE Spirits presents to you a world of refined indulgence — where craftsmanship meets character. From the
                 crisp clarity of our Gin, distilled to perfection with handpicked botanicals, to the deep, amber warmth
                 of our Whiskey, aged with patience and passion — every bottle we create carries the essence of
                 distinction.</p>
 
-            <img src="https://placehold.co/600x400/111111/FFFFFF?text=SFE+Spirits+Collection" alt="SFE Spirits bottles"
-                 class="hero-image"/>
+            <div class="image-pair">
+                <img src="assets/7.jpg" alt="SFE Spirits bottles" class="hero-image"/>
+                <img src="assets/8.jpg" alt="SFE Spirits bottles" class="hero-image"/>
+            </div>
 
             <p>Born from a vision to blend heritage with innovation, SFE Spirits celebrates the art of fine drinking —
                 <span class="highlight-sfe">smooth</span> in spirit, <span class="highlight-sfe">fine</span> flavour,
                 and timelessly <span class="highlight-sfe">exotic</span> in experience. Raise your glass. Discover your
                 spirit.</p>
 
-            <img src="https://placehold.co/600x400/111111/FFFFFF?text=Craftsmanship+and+Character"
-                 alt="Bottles and craftsmanship tools"
-                 class="hero-image"/>
+            <div class="image-pair">
+                <img src="assets/2.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
+                <img src="assets/3.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
+            </div>
         </section>
         <section class="feature-section fade-in-section testimonial">
             <h2>From Our Patrons</h2>
@@ -100,7 +104,7 @@
             <p>At SFE Spirits, every bottle tells a story — one of passion, precision, and purpose. What began as a
                 pursuit of perfection soon turned into a promise — to craft spirits that are not just smooth to sip, but
                 soulful to remember.</p>
-            <img src="https://placehold.co/600x200/111111/FFFFFF?text=Our+Promise" alt="SFE Spirits craftsmanship"
+            <img src="assets/our_story.jpg" alt="SFE Spirits craftsmanship"
                  class="hero-image"/>
             <p>Born from Britain's coastal legacy and reimagined through modern craftsmanship, The Harbour Collection
                 celebrates the timeless bond between land, sea, and spirit. Each bottle in the collection reflects the
@@ -112,7 +116,7 @@
 
     <main id="spirits-page" class="page-content" style="display: none;">
         <section>
-            <h2 class="collection-title">THE HARBOUR COLLECTION</h2>
+            <h2>The Harbour Collection</h2>
             <div class="tabs-container">
                 <button class="tab-button active" data-tab="whiskey-content">Kings Harbour Whiskey</button>
                 <button class="tab-button" data-tab="gin-content">Royal Harbour Gin</button>
@@ -121,7 +125,7 @@
             <div id="whiskey-content" class="tab-content active">
                 <div class="spirit-section fade-in-section">
                     <h3>The Story of Kings Harbour Whiskey</h3>
-                    <img src="https://placehold.co/800x300/111111/FFFFFF?text=Kings+Harbour+Whiskey"
+                    <img src="assets/5.jpg"
                          alt="Kings Harbour Whiskey Bottle Shot" class="hero-image large-spirit-image"/>
 
                     <p>Born along Britain's storied shores, King's Harbour Whiskey pays tribute to the spirit of
@@ -138,30 +142,33 @@
 
                     <h4>Ingredients</h4>
 
-                    <img src="https://placehold.co/800x300/111111/FFFFFF?text=Ingredients+Visual"
-                         alt="Ingredients Close-up" class="hero-image large-spirit-image"/>
+                    <div class="ingredients-flex-container">
 
-                    <div class="ingredients-list new-layout">
-                        <div class="ingredient-item">
-                            <p><strong>Demineralized Water:</strong> Purified water, essential for balancing the alcohol
-                                strength and ensuring the final product's clarity and smoothness.</p>
-                        </div>
-                        <div class="ingredient-item">
-                            <p><strong>Neutral Spirits:</strong> High quality, clear alcohol added to achieve the
-                                desired balance and mouthfeel in the final blend.</p>
-                        </div>
-                        <div class="ingredient-item">
-                            <p><strong>Indian Matured Malts:</strong> Carefully selected malt whiskies, aged in barrels
-                                in India, that form the heart of the blend and contribute rich, complex flavor notes.
-                            </p>
-                        </div>
-                        <div class="ingredient-item">
-                            <p><strong>Containe Permitted Flavours:</strong> Specific flavor compounds added to achieve
-                                the characteristic and consistent King's Harbour taste profile.</p>
-                        </div>
-                        <div class="ingredient-item">
-                            <p><strong>Imported Scotch:</strong> Triple distilled Indian grain spirit blended with
-                                matured premium Indian malt and Imported scotch malt</p>
+                        <img src="assets/4.jpg"
+                             alt="Ingredients Close-up" class="hero-image large-spirit-image ingredients-image-flex"/>
+
+                        <div class="ingredients-list new-layout">
+                            <div class="ingredient-item">
+                                <p><strong>Demineralized Water:</strong> Purified water, essential for balancing the alcohol
+                                    strength and ensuring the final product's clarity and smoothness.</p>
+                            </div>
+                            <div class="ingredient-item">
+                                <p><strong>Neutral Spirits:</strong> High quality, clear alcohol added to achieve the
+                                    desired balance and mouthfeel in the final blend.</p>
+                            </div>
+                            <div class="ingredient-item">
+                                <p><strong>Indian Matured Malts:</strong> Carefully selected malt whiskies, aged in barrels
+                                    in India, that form the heart of the blend and contribute rich, complex flavor notes.
+                                </p>
+                            </div>
+                            <div class="ingredient-item">
+                                <p><strong>Containe Permitted Flavours:</strong> Specific flavor compounds added to achieve
+                                    the characteristic and consistent King's Harbour taste profile.</p>
+                            </div>
+                            <div class="ingredient-item">
+                                <p><strong>Imported Scotch:</strong> Triple distilled Indian grain spirit blended with
+                                    matured premium Indian malt and Imported scotch malt</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -170,10 +177,12 @@
             <div id="gin-content" class="tab-content">
                 <div class="spirit-section fade-in-section">
                     <h3>The Story of Royal Harbour Gin</h3>
-                    <img src="https://placehold.co/800x300/111111/FFFFFF?text=Royal+Harbour+Gin+Bottle+Shot"
+                    <img src="assets/1.jpg"
                          alt="Royal Harbour Gin Bottle"
                          class="hero-image large-spirit-image"/>
-
+                    <img src="assets/6.jpg"
+                         alt="Royal Harbour Gin Bottle"
+                         class="hero-image large-spirit-image"/>
                     <p>Inspired by Britain's maritime heritage, Royal Harbour Gin is a tribute to the sea — where
                         adventure met artistry, and discovery met distinction. Crafted along the coast where botanicals
                         once arrived on merchant ships from faraway lands, it carries the freshness of the ocean breeze
