--- a/index.html
+++ b/index.html
@@ -287,8 +287,7 @@
 
     <footer class="footer-container">
         <div class="social-menu">
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/sfespirits/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
         </div>
         <nav aria-label="Footer Navigation">
