Changed around content and styling

--- a/index.html
+++ b/index.html
@@ -53,19 +53,26 @@
                 of our Whiskey, aged with patience and passion — every bottle we create carries the essence of
                 distinction.</p>
 
-            <div class="image-pair">
-                <img src="assets/7.jpg" alt="SFE Spirits bottles" class="hero-image"/>
-                <img src="assets/8.jpg" alt="SFE Spirits bottles" class="hero-image"/>
-            </div>
+            <img src="assets/7.jpg" alt="SFE Spirits bottles" class="hero-image"/>
 
             <p>Born from a vision to blend heritage with innovation, SFE Spirits celebrates the art of fine drinking —
                 <span class="highlight-sfe">smooth</span> in spirit, <span class="highlight-sfe">fine</span> flavour,
                 and timelessly <span class="highlight-sfe">exotic</span> in experience. Raise your glass. Discover your
                 spirit.</p>
 
-            <div class="image-pair">
-                <img src="assets/2.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
-                <img src="assets/3.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
+            <div class="image-slider" aria-roledescription="carousel" aria-label="SFE Spirit Images">
+                <div class="slides-container">
+                    <div class="slide active-slide" role="group" aria-roledescription="slide" aria-label="1 of 2">
+                        <img src="assets/2.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
+                    </div>
+                    <div class="slide" role="group" aria-roledescription="slide" aria-label="2 of 2">
+                        <img src="assets/3.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
+                    </div>
+                </div>
+                <button class="slider-btn prev-btn" aria-label="Previous image"><i class="fas fa-chevron-left"></i>
+                </button>
+                <button class="slider-btn next-btn" aria-label="Next image"><i class="fas fa-chevron-right"></i>
+                </button>
             </div>
         </section>
         <section class="feature-section fade-in-section testimonial">
@@ -144,30 +151,30 @@
 
                     <div class="ingredients-flex-container">
 
-                        <img src="assets/4.jpg"
+                        <img src="assets/7.jpg"
                              alt="Ingredients Close-up" class="hero-image large-spirit-image ingredients-image-flex"/>
 
                         <div class="ingredients-list new-layout">
                             <div class="ingredient-item">
-                                <p><strong>Demineralized Water:</strong> Purified water, essential for balancing the alcohol
-                                    strength and ensuring the final product's clarity and smoothness.</p>
+                                <p><strong>Imported Scotch:</strong> Aged in Oak Barrels & peated to create a
+                                    distinctive smokey taste to achieve the characteristic and consistent King's Harbour
+                                    taste profile.</p>
                             </div>
                             <div class="ingredient-item">
-                                <p><strong>Neutral Spirits:</strong> High quality, clear alcohol added to achieve the
-                                    desired balance and mouthfeel in the final blend.</p>
+                                <p><strong>Indian Matured Malts:</strong> Carefully selected aged malt whiskies that
+                                    contributes to a rich blend and complex flavor notes.</p>
                             </div>
                             <div class="ingredient-item">
-                                <p><strong>Indian Matured Malts:</strong> Carefully selected malt whiskies, aged in barrels
-                                    in India, that form the heart of the blend and contribute rich, complex flavor notes.
-                                </p>
+                                <p><strong>Extra Neutral Alcohol:</strong> Triple distilled Indian grain spirit,
+                                    high-quality, clear alcohol added to achieve the desired balance.</p>
                             </div>
                             <div class="ingredient-item">
-                                <p><strong>Containe Permitted Flavours:</strong> Specific flavor compounds added to achieve
-                                    the characteristic and consistent King's Harbour taste profile.</p>
+                                <p><strong>Contains Permitted Flavours:</strong> Specific Scotch flavor & Caramel
+                                    compounds are added to enhance the taste in the final blend.</p>
                             </div>
                             <div class="ingredient-item">
-                                <p><strong>Imported Scotch:</strong> Triple distilled Indian grain spirit blended with
-                                    matured premium Indian malt and Imported scotch malt</p>
+                                <p><strong>Demineralized Water:</strong> Purified water, essential for balancing the
+                                    alcohol strength and ensuring the final product's clarity and smoothness.</p>
                             </div>
                         </div>
                     </div>
@@ -177,12 +184,11 @@
             <div id="gin-content" class="tab-content">
                 <div class="spirit-section fade-in-section">
                     <h3>The Story of Royal Harbour Gin</h3>
+
                     <img src="assets/1.jpg"
                          alt="Royal Harbour Gin Bottle"
-                         class="hero-image large-spirit-image"/>
-                    <img src="assets/6.jpg"
-                         alt="Royal Harbour Gin Bottle"
-                         class="hero-image large-spirit-image"/>
+                         class="hero-image gin-spirit-image"/>
+
                     <p>Inspired by Britain's maritime heritage, Royal Harbour Gin is a tribute to the sea — where
                         adventure met artistry, and discovery met distinction. Crafted along the coast where botanicals
                         once arrived on merchant ships from faraway lands, it carries the freshness of the ocean breeze
@@ -194,6 +200,10 @@
                         taste for timeless sophistication.</p>
 
                     <h4>The Botanicals</h4>
+
+                    <img src="assets/6.jpg"
+                         alt="Royal Harbour Gin Bottle"
+                         class="hero-image gin-spirit-image"/>
 
                     <div class="botanicals-list new-layout">
                         <div class="botanical-item horizontal-item">
