Contact Us changes

--- a/index.html
+++ b/index.html
@@ -281,16 +281,37 @@
             </div>
         </section>
     </main>
+
     <main id="contact-page" class="page-content" style="display: none;">
         <section class="fade-in-section">
             <h2>Contact Us</h2>
-            <p>For any inquiries, please reach out to our team.</p>
+
             <div class="contact-grid">
                 <div class="contact-section">
-                    <h3>For Trade & Alliance</h3>
-                    <p>To feature our spirits in your esteemed establishment, please contact our team.</p>
-                    <p><strong>Email:</strong> sales@sfeuk.co<br><strong>Phone:</strong> 080-48664217</p>
+                    <h3>For Trade Inquiries & Job Opportunities</h3>
+                    <p>To feature our spirits in your esteemed establishment or for employment opportunities, please
+                        contact our team.</p>
+                    <p>
+                        <strong>Email:</strong> sales@sfeuk.co<br>
+                        <strong>Phone:</strong> 080-48664217
+                    </p>
                 </div>
+            </div>
+
+            <div class="contact-logo-section" style="margin: 40px auto 20px; max-width: 250px;">
+                <img src="assets/logo.png" alt="SFE Spirits Logo" style="width: 100%; height: auto;"/>
+            </div>
+
+            <div class="address-section" style="max-width: 600px; margin: 0 auto; text-align: center;">
+                <p>
+                    <strong>India Office (Registered Address):</strong><br>
+                    No 45 , Annamali Arcade, 2nd Floor 1st Cross, Hosur Main Road, Wilson Garden, Bengaluru, Karnataka
+                    560027
+                </p>
+                <p>
+                    <strong>UK Office:</strong><br>
+                    2nd floor, West Wing, 10 Harborne Road, Edgbaston, Birmingham, England. B15 3AA
+                </p>
             </div>
         </section>
     </main>
