Added banner and other changes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
 <body>
 
+<div id="launch-banner">
+    Launching Soon in Goa!
+</div>
+
 <div id="wrapper">
     <header id="main-navigation">
         <nav class="navbar" aria-label="Main Navigation">
