Changes Banner and Images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="launch-banner">
-    Launching Soon in Goa!
+    <b>LAUNCHING SOON IN GOA!</b>
 </div>
 
 <div id="wrapper">
@@ -64,20 +64,7 @@
                 and timelessly <span class="highlight-sfe">exotic</span> in experience. Raise your glass. Discover your
                 spirit.</p>
 
-            <div class="image-slider" aria-roledescription="carousel" aria-label="SFE Spirit Images">
-                <div class="slides-container">
-                    <div class="slide active-slide" role="group" aria-roledescription="slide" aria-label="1 of 2">
-                        <img src="assets/2.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
-                    </div>
-                    <div class="slide" role="group" aria-roledescription="slide" aria-label="2 of 2">
-                        <img src="assets/3.jpg" alt="Bottles and craftsmanship tools" class="hero-image"/>
-                    </div>
-                </div>
-                <button class="slider-btn prev-btn" aria-label="Previous image"><i class="fas fa-chevron-left"></i>
-                </button>
-                <button class="slider-btn next-btn" aria-label="Next image"><i class="fas fa-chevron-right"></i>
-                </button>
-            </div>
+            <img src="assets/2.jpg" alt="Bottles and craftsmanship tools" class="gin-image"/>
         </section>
         <section class="feature-section fade-in-section testimonial">
             <h2>From Our Patrons</h2>
@@ -155,7 +142,7 @@
 
                     <div class="ingredients-flex-container">
 
-                        <img src="assets/7.jpg"
+                        <img src="assets/8.jpg"
                              alt="Ingredients Close-up" class="hero-image large-spirit-image ingredients-image-flex"/>
 
                         <div class="ingredients-list new-layout">
@@ -189,7 +176,7 @@
                 <div class="spirit-section fade-in-section">
                     <h3>The Story of Royal Harbour Gin</h3>
 
-                    <img src="assets/1.jpg"
+                    <img src="assets/3.jpg"
                          alt="Royal Harbour Gin Bottle"
                          class="hero-image gin-spirit-image"/>
 
