Made changes due to demands

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="launch-banner">
-    <b>LAUNCHING SOON IN GOA!</b>
+    <b>COMING SOON TO GOA!</b>
 </div>
 
 <div id="wrapper">
