--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>At SFE Spirits, every bottle tells a story — one of passion, precision, and purpose. What began as a
                 pursuit of perfection soon turned into a promise — to craft spirits that are not just smooth to sip, but
                 soulful to remember.</p>
-            <img src="assets/our_story.jpg" alt="SFE Spirits craftsmanship"
+            <img src="assets/9.png" alt="SFE Spirits craftsmanship"
                  class="hero-image"/>
             <p>Born from Britain's coastal legacy and reimagined through modern craftsmanship, The Harbour Collection
                 celebrates the timeless bond between land, sea, and spirit. Each bottle in the collection reflects the
@@ -176,7 +176,7 @@
                 <div class="spirit-section fade-in-section">
                     <h3>The Story of Royal Harbour Gin</h3>
 
-                    <img src="assets/3.jpg"
+                    <img src="assets/3.png"
                          alt="Royal Harbour Gin Bottle"
                          class="hero-image gin-spirit-image"/>
 
@@ -192,7 +192,7 @@
 
                     <h4>The Botanicals</h4>
 
-                    <img src="assets/6.jpg"
+                    <img src="assets/6.png"
                          alt="Royal Harbour Gin Bottle"
                          class="hero-image gin-spirit-image"/>
 
