--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 of our Whiskey, aged with patience and passion — every bottle we create carries the essence of
                 distinction.</p>
 
-            <img src="assets/7.jpg" alt="SFE Spirits bottles" class="hero-image"/>
+            <img src="assets/7.png" alt="SFE Spirits bottles" class="hero-image"/>
 
             <p>Born from a vision to blend heritage with innovation, SFE Spirits celebrates the art of fine drinking —
                 <span class="highlight-sfe">smooth</span> in spirit, <span class="highlight-sfe">fine</span> flavour,
@@ -143,7 +143,7 @@
                     <div class="ingredients-flex-container">
 
                         <img src="assets/8.jpg"
-                             alt="Ingredients Close-up" class="hero-image large-spirit-image ingredients-image-flex"/>
+                             alt="Ingredients Close-up" class="hero-image whiskey-spirit-image ingredients-image-flex"/>
 
                         <div class="ingredients-list new-layout">
                             <div class="ingredient-item">
