Changes assets again

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 and timelessly <span class="highlight-sfe">exotic</span> in experience. Raise your glass. Discover your
                 spirit.</p>
 
-            <img src="assets/2.jpg" alt="Bottles and craftsmanship tools" class="gin-image"/>
+            <img src="assets/2.png" alt="Bottles and craftsmanship tools" class="gin-image"/>
         </section>
         <section class="feature-section fade-in-section testimonial">
             <h2>From Our Patrons</h2>
@@ -123,7 +123,7 @@
             <div id="whiskey-content" class="tab-content active">
                 <div class="spirit-section fade-in-section">
                     <h3>The Story of Kings Harbour Whiskey</h3>
-                    <img src="assets/5.jpg"
+                    <img src="assets/5.png"
                          alt="Kings Harbour Whiskey Bottle Shot" class="hero-image large-spirit-image"/>
 
                     <p>Born along Britain's storied shores, King's Harbour Whiskey pays tribute to the spirit of
@@ -142,7 +142,7 @@
 
                     <div class="ingredients-flex-container">
 
-                        <img src="assets/8.jpg"
+                        <img src="assets/8.png"
                              alt="Ingredients Close-up" class="hero-image whiskey-spirit-image ingredients-image-flex"/>
 
                         <div class="ingredients-list new-layout">
