--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="launch-banner">
-    <b>COMING SOON TO GOA!</b>
+    <b>COMING SOON TO GOA</b>
 </div>
 
 <div id="wrapper">
@@ -52,6 +52,7 @@
     <main id="home-page" class="page-content" style="display: block;">
         <section class="header fade-in-section">
             <h2>SFE Spirits</h2>
+            <h3 class="sfe-tagline">Smooth. Fine. Exotic.</h3>
             <p>SFE Spirits presents to you a world of refined indulgence — where craftsmanship meets character. From the
                 crisp clarity of our Gin, distilled to perfection with handpicked botanicals, to the deep, amber warmth
                 of our Whiskey, aged with patience and passion — every bottle we create carries the essence of
