--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <div class="contact-grid">
                 <div class="contact-section">
                     <h3>For Trade Inquiries & Job Opportunities</h3>
-                    <p>To feature our spirits in your esteemed establishment or for employment opportunities, please
+                    <p>To feature our spirits in your esteemed establishment or for career opportunities, please
                         contact our team.</p>
                     <p>
                         <strong>Email:</strong> sales@sfeuk.co<br>
