Changes assets again

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
             <div class="contact-grid">
                 <div class="contact-section">
-                    <h3>For Trade Inquiries & Job Opportunities</h3>
+                    <h3>For Trade & Alliance</h3>
                     <p>To feature our spirits in your esteemed establishment or for career opportunities, please
                         contact our team.</p>
                     <p>
